# J3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  app.manifest
resources/l10n/: de_DE.json  en_PS.json  en_US.json  es_ES.json  ru_RU.json
resources/shaders/: vertex.vs.hlsl
resources/ui/css/: backup.rcss  backups.rcss  common.rcss  default.rcss  sidebar.rcss  test_place.rcss
resources/ui/css/task/: task_bar.rcss
resources/ui/rml/: backups.rml  home.rml  mods.rml  settings.rml  sidebar.rml  test_place.rml  versions.rml
resources/ui/rml/task/: task_bar.rml
src/: common.hpp  jiayi.cpp
src/component/basic/: drawable.hpp
src/component/ui/: hierarchy_layer.hpp  rml_container.hpp
src/core/: application.cpp  application.hpp  log.cpp  log.hpp  special_folder.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/framework/component/basic/: camera.hpp  drawable.hpp  transform.hpp
src/framework/core/: application.cpp  application.hpp  timer.hpp  window.cpp  window.hpp
src/framework/resource/: resource_pool.hpp
src/framework/service/internet/: internet.cpp
src/framework/system/: ecs_manager.hpp
src/framework/system/render/: renderer.cpp  renderer.hpp
src/framework/system/render/buffer/: d3d_buffer.hpp
src/framework/system/render/material/: texture.hpp
src/framework/system/render/mesh/: mesh.hpp  vertex.hpp
src/framework/system/render/shader/: shader.cpp  shader.hpp
src/framework/ui/: rml_system.cpp  rml_system.hpp
src/framework/ui/interface/render/: dxtk_render_interface.cpp  dxtk_render_interface.hpp
src/framework/ui/interface/system/: l10n_system_interface.cpp  l10n_system_interface.hpp
src/framework/ui/view/: view.hpp
src/framework/worker/: task.hpp  worker.cpp  worker.hpp  worker_pool.cpp  worker_pool.hpp
src/j3/backup/: backup.cpp  backup.hpp  backup_manager.cpp  backup_manager.hpp
src/j3/controller/: backups_controller.cpp  backups_controller.hpp  sidebar_controller.cpp  sidebar_controller.hpp  test_place_controller.cpp  test_place_controller.hpp
src/j3/controller/task/: task_bar_controller.cpp  task_bar_controller.hpp
src/j3/game/: minecraft.cpp  minecraft.hpp
src/j3/model/: backups_model.cpp  backups_model.hpp  sidebar_model.hpp  test_place_model.cpp  test_place_model.hpp
src/j3/model/task/: task_bar_model.cpp  task_bar_model.hpp
src/j3/version/: minecraft_version.cpp  minecraft_version.hpp
src/j3/view/: sidebar.hpp  test_place.cpp  test_place.hpp
src/j3/view/task/: task_bar.cpp  task_bar.hpp
src/j3/window/: dialog_window.cpp  dialog_window.hpp  main_window.cpp  main_window.hpp
src/render/: renderer.cpp  renderer.hpp
src/resource/: resource_manager.hpp
src/service/: service.hpp  service_collection.hpp
src/service/internet/: internet.cpp  internet.hpp
src/system/: ecs_manager.cpp  ecs_manager.hpp  entity_system.hpp
src/system/render/: renderer.cpp  renderer.hpp
src/system/render/buffer/: cbuffer_types.hpp  d3d_buffer.hpp
src/system/render/material/: texture.hpp
src/system/render/mesh/: vertex.hpp
src/system/render/shader/: shader.cpp  shader.hpp
src/system/render/text/: font_resource.cpp  font_resource.hpp
src/system/ui/: hierarchy_system.cpp  hierarchy_system.hpp
src/ui/: page.hpp  rml_system.cpp  rml_system.hpp
src/ui/pages/: test_place.cpp  test_place.hpp
src/ui/pages/global_layer/: global_layer.cpp
